Initial commit atau update file

--- a/outstanding.html
+++ b/outstanding.html
@@ -326,19 +326,38 @@
         .kpi-azure  { background: linear-gradient(135deg, #00c6ff 0%, #0072ff 100%) !important; }
         .kpi-indigo { background: linear-gradient(135deg, #7928CA 0%, #FF0080 100%) !important; }
 
-        /* Wrapper untuk semua KPI cards */
+        /* Wrapper untuk semua KPI cards (glassy container + shadow seperti chart) */
         .kpi-container {
             display: flex;
             flex-wrap: wrap;
             gap: 12px;
             align-items: stretch;
+            background: rgba(255,255,255,0.65);
+            backdrop-filter: blur(8px) saturate(110%);
+            -webkit-backdrop-filter: blur(8px) saturate(110%);
+            border: 1px solid rgba(255,255,255,0.45);
+            border-radius: 12px;
+            box-shadow: 0 10px 10px rgba(0,0,0,0.12);
+            padding: 12px;
+            transition: box-shadow .25s ease, transform .25s ease;
+        }
+        .kpi-container:hover {
+            box-shadow: 0 6px 18px rgba(0,0,0,0.24);
+            transform: translateY(-3px);
+        }
+
+        /* KPI cards hover effect to match chart boxes */
+        .kpi-card { transition: box-shadow .25s ease, transform .25s ease; }
+        .kpi-card:hover {
+            box-shadow: 0 6px 18px rgba(0,0,0,0.24);
+            transform: translateY(-3px);
         }
         @media (max-width: 576px) {
             .kpi-card { width: 180px; height: auto; min-height: 86px; }
             .kpi-card .card-title { font-size: .74rem; }
             .kpi-card .card-text { font-size: 1.4rem; bottom: 8px; }
             .kpi-card .card-body { padding-bottom: 40px; } /* ruang nilai pada layar kecil */
-            .kpi-container { gap: 10px; }
+            .kpi-container { gap: 10px; padding: 10px; }
         }
     </style>
 </head>
