--- a/trafiksby.html
+++ b/trafiksby.html
@@ -159,6 +159,7 @@
 			flex-wrap: wrap;
 			gap: 12px;
 			align-items: stretch;
+			justify-content: center; /* center cards within container */
 			/* make the whole cards area look like a chart box */
 			background: rgba(255,255,255,0.65);
 			backdrop-filter: blur(8px) saturate(110%);
