--- a/trafiksby.html
+++ b/trafiksby.html
@@ -185,38 +185,60 @@
 			transform: translateY(-3px);
 		}
 
-		/* Revenue row: single line, no scroll, compact sizing */
+		/* Single-row layout specifically for revenue cards */
 		.kpi-revenue {
-			flex-wrap: nowrap;             /* force one row */
-			justify-content: space-between; /* distribute across width */
-			gap: 8px;
-			padding: 10px;
-			overflow: hidden;              /* no scroll */
+			flex-wrap: wrap;              /* allow wrapping if very tight */
+			justify-content: space-between;/* distribute evenly */
+			gap: 10px;                    /* tighter gaps */
+			padding: 10px;                /* compact padding */
+			overflow: visible;            /* no scrolling */
 		}
 		.kpi-revenue .kpi-card {
-			flex: 1 1 calc(100% / 6);
-			max-width: calc(100% / 6);
-			width: auto;                  /* override base fixed width */
-			min-width: 0;                 /* allow shrink */
-			height: 84px;                 /* compact height */
+			flex: 0 0 calc((100% - 5 * 10px) / 6); /* 6 cards accounting for 5 gaps */
+			max-width: calc((100% - 5 * 10px) / 6);
+			min-width: 160px;             /* smaller minimum to avoid scroll */
+			height: 92px;                  /* shorter */
 		}
-		.kpi-revenue .kpi-card .card-body { padding: 8px 10px; }
 		.kpi-revenue .kpi-card .card-title {
-			font-size: clamp(0.68rem, 1.3vw, 0.9rem);
-			line-height: 1.1;
+			font-size: .72rem;            /* smaller title */
 		}
 		.kpi-revenue .kpi-card .card-text {
-			font-size: clamp(1.0rem, 1.9vw, 1.25rem);
+			font-size: 1.25rem;           /* smaller value */
 			bottom: 8px;
 		}
-		/* Tighter cap for the six revenue value IDs */
+		/* Ensure revenue numeric values don’t overflow and stay readable */
 		.kpi-revenue #totalPanduSub,
 		.kpi-revenue #totalPanduGre,
 		.kpi-revenue #totalTundaSub,
 		.kpi-revenue #totalTundaGre,
 		.kpi-revenue #totalTambatSub,
 		.kpi-revenue #totalTambatGre {
-			font-size: clamp(0.95rem, 1.8vw, 1.2rem);
+			font-size: 1.22rem;           /* slight cap below card-text */
+		}
+		@media (max-width: 992px) {
+			.kpi-revenue .kpi-card {
+				flex: 0 0 calc((100% - 3 * 10px) / 4); /* 4 per row on medium */
+				max-width: calc((100% - 3 * 10px) / 4);
+				height: 90px;
+			}
+		}
+		@media (max-width: 768px) {
+			.kpi-revenue .kpi-card {
+				flex: 0 0 calc((100% - 2 * 10px) / 3); /* 3 per row on small */
+				max-width: calc((100% - 2 * 10px) / 3);
+				height: 90px;
+			}
+			.kpi-revenue .kpi-card .card-text { font-size: 1.2rem; }
+		}
+		@media (max-width: 576px) {
+			.kpi-revenue .kpi-card {
+				flex: 0 0 calc((100% - 10px) / 2);    /* 2 per row on xs */
+				max-width: calc((100% - 10px) / 2);
+				min-width: 150px;
+				height: 88px;
+			}
+			.kpi-revenue .kpi-card .card-title { font-size: .7rem; }
+			.kpi-revenue .kpi-card .card-text { font-size: 1.15rem; }
 		}
 
 		/* Hide Lokasi table and status text */
@@ -582,7 +604,7 @@
 			</div>
 		</div>
 
-		<!-- Container: KPI Pendapatan (di bawah chart, satu row tanpa scroll) -->
+		<!-- Container: KPI Pendapatan (di bawah chart, satu row) -->
 		<div class="kpi-container kpi-revenue my-3">
 			<!-- Card: Pendapatan Tambat Surabaya -->
 			<div class="card kpi-card kpi-azure kpi-card--revenue">
