--- a/outstanding.html
+++ b/outstanding.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> <!-- Ensure Chart.js is included -->
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/neo-buttons.css">
+    <link rel="stylesheet" href="assets/css/neo-buttons.css" />
     <script src="assets/js/auth.js"></script>
     <style>
         table {
@@ -376,6 +376,11 @@
             </button>
             <a href="trafiksby.html" class="neo-btn neo-btn--purple neo-btn--sm" id="openTrafik">
                 <span class="neo-btn__label">Trafik</span>
+                <span class="neo-btn__icon">➜</span>
+            </a>
+            <!-- Tambah: tombol Tarif di baris yang sama -->
+            <a href="tarif.html" class="neo-btn neo-btn--teal neo-btn--sm" id="openTarif">
+                <span class="neo-btn__label">Tarif</span>
                 <span class="neo-btn__icon">➜</span>
             </a>
         </div>
@@ -1096,6 +1101,9 @@
   if (typeof enforceAuth === 'function') {
     enforceAuth();
   }
+</script>
+</body>
+</html>
 </script>
 </body>
 </html>
